Updated version and contributors into package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     {
       "name": "Oleg Gomozov",
       "email": "blackswanny@gmail.com"
+    },
+    {
+      "name": "Andrea Koutifaris",
+      "email": "kouty79@gmail.com"
     }
   ],
   "repository": {
